# JamSpell

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  clear.sh  context_spell.py  context_spell_prototype.py  convert_corpora.rb  evaluate.py  jamspell.i  norvig_spell.py  openspell.i  requirements_test.txt  setup.py  test_jamspell.py  typo_model.py
.github/workflows/: build.yml  build_and_test.yml  publish.yml
contrib/: CMakeLists.txt
contrib/bloom/: CMakeLists.txt  LICENSE  bloom_filter.cpp  bloom_filter.hpp
contrib/cityhash/: CMakeLists.txt  city.cc
contrib/csv/: csv.h
contrib/handypack/: CMakeLists.txt  handypack.cpp  handypack.hpp
contrib/httplib/: CMakeLists.txt  httplib.cpp
contrib/nlohmann/: CMakeLists.txt  json.cpp
contrib/phf/: CMakeLists.txt  phf.cc  phf.h
contrib/saveload/: CMakeLists.txt  saveload.cpp  saveload.hpp
contrib/tsl/: CMakeLists.txt  robin_map.cpp  tsl.cpp
evaluate/: context_spell.py  context_spell_prototype.py  convert_corpora.py  evaluate.py  generate_dataset.py  norvig_spell.py  simple_lm.py  typo_model.py  utils.py
jamspell/: CMakeLists.txt  bloom_filter.cpp  bloom_filter.hpp  lang_model.cpp  lang_model.hpp  perfect_hash.cpp  perfect_hash.hpp  spell_corrector.cpp  spell_corrector.hpp  utils.cpp  utils.hpp
main/: CMakeLists.txt  main.cpp
openspell/: CMakeLists.txt  bloom_filter.cpp  bloom_filter.hpp  lang_model.cpp  lang_model.hpp  perfect_hash.cpp  perfect_hash.hpp  phf_utils.cpp  phf_utils.hpp  saveload.hpp  spell_corrector.cpp  spell_corrector.hpp  utils.cpp  utils.hpp
swig/: CMakeLists.txt
swig/python/: CMakeLists.txt  setup.py.in
test_data/: alphabet_ru.txt  kapitanskaya_dochka.txt  sherlockholmes.txt
tests/: CMakeLists.txt  test_perfect_hash.cpp
train/: CMakeLists.txt  train.cpp
web_server/: CMakeLists.txt  main.cpp
